tests/baselines/reference/constructorParameterProperties2.errors.txt
==== tests/cases/compiler/constructorParameterProperties2.ts (3 errors) ====
    class C {
        y: number;
        constructor(y: number) { } // ok
    }
    
    var c: C;
    var r = c.y;
    
    class D {
        y: number;
        constructor(public y: number) { } // error
                           ~
!!! constructorParameterProperties2.ts(11,24): error TS2000: Duplicate identifier 'y'. Additional locations:
!!! 	constructorParameterProperties2.ts(10,5)
    }
    
    var d: D;
    var r2 = d.y;
    
    class E {
        y: number;
        constructor(private y: number) { } // error
                            ~
!!! constructorParameterProperties2.ts(19,25): error TS2000: Duplicate identifier 'y'. Additional locations:
!!! 	constructorParameterProperties2.ts(18,5)
    }
    
    var e: E;
    var r3 = e.y; // error
               ~
!!! constructorParameterProperties2.ts(23,12): error TS2107: 'E.y' is inaccessible.